--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Sell Your House For Cash| Fixin' To Buy, LLC.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/main.css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -19,6 +19,6 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <F2B-main>Loading...</F2B-main>
+    <app>Loading...</app>
   </body>
 </html>
